API v0.7 and added API security handler
