# api/swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "description": "API for 40k ranking",
-    "version": "0.0.6",
+    "version": "0.0.7",
     "title": "40k API"
   },
   "host": "hackedo.io",
@@ -17,7 +17,7 @@
   "securityDefinitions": {
     "FBApiKeyAuth": {
       "type": "apiKey",
-      "in": "header",
+      "in": "query",
       "name": "X-FB-API-Key"
     }
   },
@@ -95,7 +95,7 @@
     },
     "/joueur": {
       "put": {
-        "description": "Enregistre ou met a jour un joueur",
+        "description": "Enregistre ou met à jour un joueur",
         "operationId": "joueurPUT",
         "produces": [
           "application/json"
@@ -143,6 +143,15 @@
         "security": [
           {
             "FBApiKeyAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "X-FB-API-Key",
+            "in": "query",
+            "type": "string",
+            "description": "FB token",
+            "required": true
           }
         ],
         "responses": {
@@ -208,7 +217,7 @@
         "parameters": [],
         "responses": {
           "200": {
-            "description": "show one player",
+            "description": "list des matchs",
             "schema": {
               "type": "array",
               "items": {
@@ -237,7 +246,7 @@
           {
             "name": "match",
             "in": "body",
-            "description": "details du la partie",
+            "description": "details de la partie",
             "required": true,
             "schema": {
               "$ref": "#/definitions/match"
@@ -353,6 +362,10 @@
     "match": {
       "type": "object",
       "properties": {
+        "id": {
+          "type": "string",
+          "description": "Id du match"
+        },
         "date": {
           "type": "string",
           "format": "date-time",
